# sharpapi-python-client

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sharpapi/: __init__.py  sharp_api_service.py
sharpapi/dto/: __init__.py  sharp_api_subscription_info.py
sharpapi/enums/: __init__.py  sharp_api_job_status_enum.py  sharp_api_job_type_enum.py  sharp_api_languages.py  sharp_api_voice_tone.py
src/sharpapi/: __init__.py
src/sharpapi/dto/: __init__.py  job_description_parameters.py  sharp_api_job.py
src/sharpapi/enums/: __init__.py  sharp_api_job_status_enum.py
tests/: test_sharp_api_service.py
