[tool.poetry]
name = "sharpapi-python-client"
version = "1.0.2"
description = "SharpAPI.com Python SDK Client - AI-Powered Workflow Automation API."
authors = ["Dawid Makowski <contact@sharpapi.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://sharpapi.com"
repository = "https://github.com/sharpapi/sharpapi-python-client"
documentation = "https://sharpapi.com/documentation"

packages = [
    { include = "sharpapi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
